--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 VITE_API_URL=/api/pmcc/v1
 
-VITE_EXTERNAL_API_URL=https://your-external-api.com
+VITE_EXTERNAL_API_URL=https://jira-project-api.onrender.com
 
 # Local Backend Server
-VITE_LOCAL_BE_URL=http://localhost:8080
+VITE_LOCAL_BE_URL=https://jira-project-api.onrender.com
