--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,56 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
+    # ===== JIRA BACKEND (https://jira-project-api.onrender.com) =====
+    
+    location /api/pmcc/v1/dashboard/ {
+        rewrite ^/api/pmcc/v1/dashboard/(.*)$ /api/dashboard/$1 break;
+        proxy_pass https://jira-project-api.onrender.com;
+        proxy_ssl_server_name on;
+        proxy_set_header Host jira-project-api.onrender.com;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /api/pmcc/v1/tasks/ {
+        rewrite ^/api/pmcc/v1/tasks/(.*)$ /api/tasks/$1 break;
+        proxy_pass https://jira-project-api.onrender.com;
+        proxy_ssl_server_name on;
+        proxy_set_header Host jira-project-api.onrender.com;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /api/pmcc/v1/projects/ {
+        rewrite ^/api/pmcc/v1/projects/(.*)$ /api/projects/$1 break;
+        proxy_pass https://jira-project-api.onrender.com;
+        proxy_ssl_server_name on;
+        proxy_set_header Host jira-project-api.onrender.com;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /api/pmcc/v1/users/ {
+        rewrite ^/api/pmcc/v1/users/(.*)$ /api/users/$1 break;
+        proxy_pass https://jira-project-api.onrender.com;
+        proxy_ssl_server_name on;
+        proxy_set_header Host jira-project-api.onrender.com;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /api/pmcc/v1/type-tasks/ {
+        rewrite ^/api/pmcc/v1/type-tasks/(.*)$ /api/type-tasks/$1 break;
+        proxy_pass https://jira-project-api.onrender.com;
+        proxy_ssl_server_name on;
+        proxy_set_header Host jira-project-api.onrender.com;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /api/pmcc/v1/task-groups/ {
+        rewrite ^/api/pmcc/v1/task-groups/(.*)$ /api/task-groups/$1 break;
+        proxy_pass https://jira-project-api.onrender.com;
+        proxy_ssl_server_name on;
+        proxy_set_header Host jira-project-api.onrender.com;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
     # SPA fallback - all other routes go to index.html
     location / {
         try_files $uri $uri/ /index.html;
